# devops-f20-final-exam-dompolochak

./: Jenkinsfile  Report.md
.circleci/: config.yml
markturn/: CMakeLists.txt
